--- a/src/pages/signup/Signup.scss
+++ b/src/pages/signup/Signup.scss
@@ -1,171 +1,178 @@
+@mixin dimension($width, $height) {
+    width: $width;
+    height: $height;
+}
+
+@mixin display($display, $flex-direction) {
+    display: $display;
+    flex-direction: $flex-direction;
+}
+
+@mixin alignment($align-items, $justify-content) {
+    align-items: $align-items;
+    justify-content: $justify-content;
+}
+
+@mixin border($border, $border-radius) {
+    border: $border;
+    border-radius: $border-radius;
+}
+
+@mixin color($color, $background-color) {
+    color: $color;
+    background-color: $background-color;
+}
+
+@mixin font($font-size, $font-family, $font-weight) {
+    font-size: $font-size;
+    font-family: $font-family;
+    font-weight: $font-weight;
+}
+
+@mixin margin($margin-top, $margin-bottom, $line-height,$padding) {
+    padding: $padding;
+    margin-top: $margin-top;
+    margin-bottom: $margin-bottom;
+    line-height: $line-height;
+}
+
 .signup{
-    width: 100%;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    @include dimension(100%, 100%);
+    @include display(flex, null);
+    @include alignment(center, center);
+    .signup-container{
+        @include dimension(60%, 90%);
+        @include display(flex, null);
+        @include alignment(center, center);
+        @include border(1px solid lightgray, 5px);
+
+        .text-field-container{
+            @include dimension(60%, null);
+            @include display(flex, column);
+            @include alignment(center, center);
+            @include margin(null, null, null, 40px);
+            .Header-container{
+                @include dimension(100%, null);
+                @include display(flex, row);
+                @include alignment(null, left);
+                @include font(null, null, null);
+                    .color1{@include color(#1a73e8,null);}
+                    .color2{@include color(red,null);}
+                    .color3{@include color(yellow,null);}
+                    .color4{@include color(#1a73e8,null);}
+                    .color5{@include color(green,null);}
+                    .color6{@include color(red,null);}
+            }
+
+            .title{
+                @include dimension(100%, null);
+                @include display(flex, column);
+                @include alignment(center, null);
+                @include margin(-20px, null, null, null);
+                    .title-1{
+                        @include dimension(100%, null);
+                        @include color(#000, null);
+                        @include font(null, null, unset);
+                        @include display(flex, null);
+                        @include alignment(null, left);
+                    }
+                    .title-2{
+                        @include dimension(100%, null);
+                        @include display(flex, null);
+                        @include alignment(null, left);
+                        @include margin(-10px, null, null, null);
+                    }
+                }
+
+            .field-row{
+                @include dimension(100%, null);
+                @include display(flex, column);
+                @include alignment(center, null);
+                @include margin(10px, null, null, null);
+                    .field-cloumn{
+                        @include dimension(100%, null);
+                        @include display(flex, null);
+                        @include margin(10px, null , null, null);
+                    }
+                    .field-cloumn-1{
+                        @include dimension(100%, null);
+                    }
+                    .paragraph{
+                        @include dimension(100%, null);
+                        @include margin(0px, null, null, null);
+                        @include display(flex, null);
+                        @include font(12px , null, null);
+                        @include color(#5f6368, null);
+                    }
+            }
+
+            .password{
+                @include display(flex, null);
+                @include alignment(inherit, left);
+                @include dimension(100%, null);
+            }
+
+            .footer-container{
+                @include dimension(100%, null);
+                @include display(flex, row);
+                @include alignment(center, space-between);
+                @include color(#1a73e8, null);
+                @include font(null , "roboto,'Noto Sans Myanmar UI',arial,sans-serif", null);
+                @include margin(30px , null, null, null);
+
+                    .Create-button{
+                        @include color(#1a73e8, transparent);
+                        @include border(0, null);
+                        @include display(contents, null);
+                    }
+                    .next-button{
+                        @include color(#fff, #1a73e8);
+                        @include font(null, null, 500);
+                    }
+            }
+
+        }
+        .image-container{
+            @include dimension(40%, null);
+            @include alignment(center, center);
+            @include display(flex, column);
+            @include color(#5f6368, null);
+        }
+    }
 }
 
-.signup-container{
-    width:60%;
-    height: 90%;
-    display: flex;
-    align-items: center;
-    justify-content: center; 
-    border: 1px solid lightgray;
-    border-radius: 5px;
-}
 
-.text-field-container{
-    width: 60%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center; 
-}
-
-.Header-container{
-    width: 80%;
-    display: flex;
-    justify-content: left;
-    flex-direction: row;
-    font-family: 'Google Sans','Noto Sans Myanmar UI',arial,sans-serif;
-    margin-bottom: -20px;
-}
-
-.color1{
-    color: #1a73e8;
-}
-.color2{
-    color: red;
-}
-.color3{
-    color: yellow;
-}
-.color4{
-    color:  #1a73e8;
-}
-.color5{
-    color: green;
-}
-.color6{
-    color: red;
-}
-
-.title{
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-.title-1{
-    width: 80%;
-    color: #000;
-    font-family: 'Google Sans','Noto Sans Myanmar UI',arial,sans-serif;
-    font-weight: unset;
-    display: flex;
-    justify-content: left;
-    margin-bottom: 0px;
-}
-
-.title-2{
-    width: 80%;
-    display: flex;
-    justify-content: left;
-    margin-bottom: 50px;
-}
-
-.field-row{
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    // align-items: center;
-}
-
-.field-cloumn{
-    width: 90%;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-}
-
-.field-cloumn-1{
-    width: 100%;
-    margin-bottom: 10px;
-}
-
-.password{
-   display: flex;
-   align-items: inherit;
-   justify-content: left;
-   width: 80%;
-   margin-top: -20px;
-}
-
-.footer-container{
-    width: 80%;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-    color: #1a73e8;
-    font-family:  roboto,'Noto Sans Myanmar UI',arial,sans-serif;
-    letter-spacing: .0107142857em;
-    margin-top: 30px;
-}
-
-.Create-button{
-    color: #1a73e8;
-    background-color: transparent;
-    border: 0;
-    display: contents;
-}
-
-.next-button{ 
-    color: #fff;
-    background-color: #1a73e8;
-    font-weight: 500;
-}
-
-.image-container{
-    width: 40%;
-    align-items: center;
-    justify-content: center;
-    display: flex;
-    flex-direction: column;
-}
-
-@media screen and (max-width:320px) {
-    .signup{
-      font-size: 10px;
+// @media screen and (max-width:320px) {
+//     .signup{
+//       font-size: 10px;
     
-    }
-    .signup-container{
-        font-size: 10px;
-    }
-    .title{
-        font-size: 10px;
-    }
-    .image-container{
-        font-size: 10px;
-    }
-}
+//     }
+//     .signup-container{
+//         font-size: 10px;
+//     }
+//     .title{
+//         font-size: 10px;
+//     }
+//     .image-container{
+//         font-size: 10px;
+//     }
+// }
 
-@media screen and (max-width:1024px) {
-    .signup{
-        // margin: 0%;
-        // width: 100%;
-        font-size: 15px;
-    }
-    .signup-container{
-        width: 50%;
-        font-size: 15px;
-    }
-    .title{
-        font-size: 15px;
-    }
-    .image-container{
-        font-size: 10px;
-    }
-}
+// @media screen and (max-width:1024px) {
+//     .signup{
+//         // margin: 0%;
+//         // width: 100%;
+//         font-size: 15px;
+//     }
+//     .signup-container{
+//         width: 50%;
+//         font-size: 15px;
+//     }
+//     .title{
+//         font-size: 15px;
+//     }
+//     .image-container{
+//         font-size: 10px;
+//     }
+// }
+
