--- a/src/component/TakenNotes/TakenNotes.scss
+++ b/src/component/TakenNotes/TakenNotes.scss
@@ -6,7 +6,9 @@
 }
 
 .note-container{
-    box-shadow: inset 1px 1px 0 rgb(0 0 0 / 10%), inset 0 -1px 0 rgb(0 0 0 / 7%);
+    box-shadow: -1px -1px 5px rgb(153, 150, 150),1px 1px 10px rgb(153, 150, 150);
+    color: rgba(0, 0, 0, 0.54);
+    border-radius: 5px;
     display: flex;
     height: 60px;
     width: 60%;
@@ -14,22 +16,24 @@
     justify-content: center;
     padding: 10px;
     input{
-        width: 75%;
+        width: 80%;
         outline: none;
         border:none;
     }
     .icons{
-        width: 25%;
+        width: 20%;
         display: flex;
-        justify-content: space-evenly;
+        justify-content: space-around;
     }
 }
 
     .take-container{
-        box-shadow: inset 1px 1px 0 rgb(0 0 0 / 10%), inset 0 -1px 0 rgb(0 0 0 / 7%);
+        box-shadow: -1px -1px 5px rgb(153, 150, 150),1px 1px 10px rgb(153, 150, 150);
+        color: rgba(0, 0, 0, 0.54);
+        border-radius: 5px;
         display: flex;
         flex-direction: column;
-        height: 130px;
+        height: 150px;
         width: 60%;
         padding: 10px;
         input{
@@ -37,7 +41,7 @@
             outline: none;
             border:none;
             width: 100%;
-            height: 45px;
+            height: 50px;
         }
         .icons{
             display: flex;
@@ -47,6 +51,13 @@
                width: 60%;
                display: flex;
                justify-content: space-around;
+           }
+           .button-content{
+               display: flex;
+           }
+           .button{
+               border: none;
+               background-color: transparent;
            }
         }
     }
