--- a/src/pages/dashboard/Dashboard.scss
+++ b/src/pages/dashboard/Dashboard.scss
@@ -22,5 +22,12 @@
 }
 
 .header-Content-3{
-    
+    // margin-left: 30%;
+
 }
+
+.header-icons{
+    display: flex;
+    // margin-left: 30%;
+}
+
