[Praveen]Refactor Dashboard Display page

--- a/src/component/DisplayNotes/DisplayNotes.scss
+++ b/src/component/DisplayNotes/DisplayNotes.scss
@@ -1,6 +1,7 @@
 .display-body{
     width: 100%;
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
     justify-content: flex-start;
     margin-top: 20px;
