--- a/src/component/TakenNotes/TakenNotes.scss
+++ b/src/component/TakenNotes/TakenNotes.scss
@@ -34,8 +34,9 @@
         height: 150px;
         width: 60%;
         padding: 10px;
+        // background-color: inherit;
         input{
-           
+            background-color: inherit;
             outline: none;
             border:none;
             width: 100%;
